@@ -9,6 +9,9 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  21 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh: Expanded
+  CONF_LIBDIR support, so it honors --prefix set values. (#61060)
+
   19 Aug 2004; Marius Mauch <genone@gentoo.org> bin/repoman: Added
   FEATURES and USE to the readonly variable check.
 
